<resources>
    <string name="app_name">Flood Fill</string>

    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="speed">Speed</string>
    <string name="size_divider" translatable="false">X</string>
    <string name="generate">Generate</string>

    <string name="wide_algorithm">Wide</string>
    <string name="depth_algorithm">Depth</string>
    <string name="lines_algorithm">Lines</string>

    <string name="width_error">Width should be from 1 to 512</string>
    <string name="height_error">Height should be from 1 to 512</string>
</resources>
